fix margin left on mobile

--- a/src/app/components/blocks/header/header.component.scss
+++ b/src/app/components/blocks/header/header.component.scss
@@ -175,6 +175,10 @@
 
   &:first-child {
     margin-left: 15px;
+
+    @media screen and (width <= 992px) {
+      margin-left: 0;
+    }
   }
 
   &__link {
